--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,14 @@
             <artifactId>httpclient</artifactId>
             <version>4.3.6</version>
         </dependency>
+
+        <!--支付宝-->
+        <dependency>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
+            <version>3.4.49.ALL</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
